<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="25dp"
    android:paddingLeft="25dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_apk_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_select_apk_file"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_installed_apk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_select_installed_apk"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/odex_patcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_odex_patcher"/>

</androidx.appcompat.widget.LinearLayoutCompat>